blogs changes risk high